# alexa-skill

./: .gitignore  LICENSE  README.md  Real.cabal  data_analysis.ipynb  main.py  octo-shell.cabal  requirements.txt
src/: Main.hs
src/Model/: Category.hs
src/Utils/: Helpers.hs
