name:                octo-shell
version:             0.1
synopsis:            First cabal project
-- description:         
license:             MIT
license-file:        LICENSE
author:              Mysterion
-- copyright:           
-- category:            
build-type:          Simple
cabal-version:       >=1.8

executable octo-shell
  main-is:           Main.hs
  other-modules:     Helpers  
  build-depends:     base ==4.6.*,text,process
  hs-source-dirs:    src
                     src/Utils	
  ghc-options:	     -W 
